--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mongodb": "^3.5.9",
     "next": "latest",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-input-range": "^1.3.0",
+    "swr": "^0.4.1"
   },
   "license": "MIT"
 }
