--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "mongodb": "^3.5.9",
     "next": "latest",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
     "react-input-range": "^1.3.0",
     "swr": "^0.4.1"
