--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "with-mongodb",
-  "version": "0.1.0",
+  "name": "chatubacompass",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
+  "author": "Cristian Barni",
+  "license": "MIT",
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "mongodb": "^3.5.9",
-    "next": "latest",
-    "react": "^16.13.1",
-    "react-chartjs-2": "^2.11.1",
-    "react-dom": "^16.13.1",
-    "react-input-range": "^1.3.0",
-    "swr": "^0.4.1"
-  },
-  "license": "MIT"
+    "@prisma/client": "^3.1.1",
+    "next": "^11.1.2",
+    "prisma": "^3.1.1",
+    "react": "^17.0.2",
+    "swr": "^1.0.1"
+  }
 }
