--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^3.1.1",
+    "chart.js": "^3.5.1",
     "next": "^11.1.2",
     "prisma": "^3.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "swr": "^1.0.1"
   }
 }
