--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^3.1.1",
     "chart.js": "^3.5.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "next": "^11.1.2",
     "prisma": "^3.1.1",
     "react": "^17.0.2",
